# autonomous-data-team

./: .dockerignore  .env.example  .gitignore  AGENTS.md  APPROACH.md  Dockerfile  README.md  pyproject.toml
autonomous_data_team/: agents.py  archive_sync.py  cli.py  config.py  crewai_bridge.py  dataset_ingestion.py  entry_parse.py  experiment_runner.py  extractor.py  hosted.py  mail.py  models.py  probe.py  ranking.py  reporting.py  service.py  storage.py  swarm.py
tests/: conftest.py  test_crewai_bridge.py  test_dataset_ingestion.py  test_entry_parse.py  test_experiment_runner.py  test_extractor.py  test_hosted.py  test_mail.py  test_probe.py  test_ranking.py  test_service.py  test_swarm.py
tests/fixtures/archive/editions/: 2025-01-08.md
tests/fixtures/data/: sample.csv  sample.json
